--- a/app.json
+++ b/app.json
@@ -19,12 +19,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/TasteMate.png",
+        "foregroundImage": "",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/TasteMate.png"
+      "favicon": ""
     }
   }
 }
