--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "expo": "^49.0.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.72.1",
@@ -20,7 +21,7 @@
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "expo-linear-gradient": "~12.3.0"
+    "react-native-svg": "^13.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
